--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -230,7 +230,20 @@
             margin: 0 10px;
             text-decoration: none;
         }
-    </style>
+        .imagenfb, .imagenIG, .imagentw, .imagenpinterest{
+            width: 20px;
+            height: 20px;
+            color:#5b636d;
+            }
+        .social-icons {
+            display: flex;                
+            justify-content: center;      
+            align-items: center;          
+            gap: 22px;                    
+            margin-top: 8px;              
+            width: auto;
+}
+</style>
 </head>
 <body>
 
@@ -329,10 +342,18 @@
             <li><a href="#">Projects</a></li>
         </ul>
         <div class="social-icons">
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <div class = "imagenfb">
+                <img src="img/icon-facebook.svg" alt="icono FB">
+            </div>
+            <div class = "imagenIG">
+                <img src="img/icon-instagram.svg" alt="icono IG">
+            </div>
+            <div class = "imagentw">
+                <img src="img/icon-twitter.svg" alt="icono tw">
+            </div>
+            <div class = "imagenpinterest">
+                <img src="img/icon-pinterest.svg" alt="icono pinterest">
+            </div>
         </div>
     </footer>
 </body>
